# mcp-osxphotos

./: CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  main.py  pyproject.toml
docs/: available-tools.md  publishing-test.md  publishing.md
src/mcp_osxphotos/: __main__.py  server.py
tests/: README.md  test_arg_builders.py  test_batch_edit_by_uuid.py  test_docs_guidance.py  test_query_labels.py  test_schema_shapes.py  test_smoke.py  test_tools_registry.py
