[project]
name = "mcp-osxphotos"
version = "0.1.0"
description = "MCP server exposing the osxphotos CLI as tools for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"mcp[cli]>=1.1.0",
	"python-dotenv>=1.0.1",
]
license = { file = "LICENSE" }

[[project.authors]]
name = "Marco Massari Calderone"
email = "marco@marcocmc.com"

[[project.urls]]
name = "MCP Osxphotos"
url = "https://github.com/marcocmc/mcp-osxphotos"

[project.scripts]
mcp-osxphotos = "mcp_osxphotos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"pyright>=1.1.389",
]
